[package]
name = "patient_access_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
ngrok = { version = "0.12.0", features = ["axum"] }
tokio = { version = "1.28.1", features = ["rt-multi-thread", "macros", "signal"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
config = {version="0.13", features=["toml"]}
oauth2 = "4.4.0"
url = "2.3.1"
clap = { version = "4.3.1", features = ["derive"] }
